syntax = "proto3";
package supercurio.wheeldata.recording;

option java_multiple_files = true;

import "wheel-ble-info.proto";
import "wheel-ble-data.proto";

message MessageType {
    oneof message {
        BleDeviceInfo ble_device_info = 1;
        GattNotification gatt_notification = 2;
    }
}
